Expose detailed available resource fields
